# reflow-ocr

./: LICENSE  PLAN.md  README.md
backend/: README.md  mypy.ini  pyproject.toml  ruff.toml
backend/reflow_ocr/: __init__.py  app.py
backend/reflow_ocr/api/: router.py
backend/reflow_ocr/api/endpoints/: __init__.py  health.py  sessions.py
backend/reflow_ocr/core/: config.py
backend/reflow_ocr/exporters/: __init__.py  base.py  docx.py  markdown.py  pdf.py  registry.py
backend/reflow_ocr/pipeline/: __init__.py  builder.py  layout.py  ocr_engines.py  pipeline.py  preprocess.py
backend/reflow_ocr/schemas/: document.py  session.py
backend/reflow_ocr/services/: __init__.py  session_repository.py  session_store.py  task_manager.py
backend/tests/: conftest.py  test_health.py  test_sessions.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs
frontend/src/renderer/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
